--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AgriSense AI - Empowering Farmers with AI and Satellite Intelligence</title>
     <meta name="description" content="AI-powered satellite crop monitoring and price prediction platform built for farmers. Using space data and artificial intelligence to estimate crop area and predict market prices." />
     <meta name="author" content="AgriSense AI" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet" />
